<resources>
    <string name="app_name">LoginAndRegister</string>
    <string name="greeting_text">Bonjour et Bienvenue !</string>
    <string name="subTitle">
        Heureux de vous rencontrer,
        <br><b>Connectez-vous</b> si vous avez déjà un compte.</br>
        <br><b>Inscrivez-vous</b> pour commencer avec notre appli.</br>
    </string>
    <string name="welcome_img">welcome</string>
    <string name="btn_register">Inscription</string>
    <string name="btn_login">Connexion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connexion_l_application">Connexion à l\'application</string>
    <string name="login_subtitle">
        <font color="#885CC3"><b>Connectez-vous</b></font> si vous avez déjà un compte.

    </string>
    <string name="email_nom_d_utilisateur">Email/Nom d\'utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="login_forgot_password">Mot de passe oublié?</string>
    <string name="don_t_have_an_account">
        Vous n\'avez pas un compte ?<font color="#885CC3"><b>Inscrivez-vous</b></font>

    </string>
    <string name="register_create_account">Créer un compte</string>

    <string name="register_subtitle">
        <font color="#885CC3"><b>Inscrivez-vous</b></font> pour commencer avec notre appli.
    </string>
    <string name="register_fullname">Votre nom complet</string>
    <string name="register_email">Votre email</string>
    <string name="register_username">Nom d\'utilisateur</string>
    <string name="register_password">Mot de passe</string>
    <string name="register_confirmPassword">Confirmer le mot de passe</string>


    <string name="have_an_account">
        Vous avez un compte?<font color="#885CC3"><b>Connectez-vous</b></font>

    </string>
    <string name="GreetingUser">Bienvenu</string>
    <string name="successful_registration">Félicitations, votre compte est bien créé !</string>

</resources>